MDL-49329 admin: Improve Plugins check page
Better inform about the number of plugins requiring attention vs total
plugins. Clean up the renderer.

--- a/theme/bootstrapbase/less/moodle/admin.less
+++ b/theme/bootstrapbase/less/moodle/admin.less
@@ -604,8 +604,11 @@ img.iconsmall {
     // Section before the plugins check table.
     #plugins-check-info {
         .actions {
-            .actionbutton {
+            > div {
                 display: inline-block;
+                margin-right: 1em;
+            }
+            .singlebutton {
                 margin: 5px;
                 padding: 0;
                 input {
