MDL-49329 admin: If unable to install a plugin, display the reason

--- a/theme/bootstrapbase/less/moodle/admin.less
+++ b/theme/bootstrapbase/less/moodle/admin.less
@@ -685,7 +685,7 @@ img.iconsmall {
                 display: inline-block;
                 margin-right: 1em;
             }
-            .singlebutton {
+            .dependencyinstall {
                 display: block;
                 margin: 5px 0;
                 padding: 0;
