--- a/theme/base/style/admin.css
+++ b/theme/base/style/admin.css
@@ -287,11 +287,12 @@
 #page-admin-index #plugins-check .requires-ok {color:#999;}
 #page-admin-index #plugins-check .requires-failed {background-color:#ffd3d9;}
 #page-admin-index #plugins-check .requires-failed .label-important {color:red;}
-#page-admin-index #plugins-check .status .pluginupdateinfo {padding:5px 10px;margin:10px 0px;background-color:#d2ebff;-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
-#page-admin-index #plugins-check .status .pluginupdateinfo.maturity50 {background-color:#ffd3d9;}
-#page-admin-index #plugins-check .status .pluginupdateinfo.maturity100,
-#page-admin-index #plugins-check .status .pluginupdateinfo.maturity150 {background-color:#f3f2aa;}
-#page-admin-index #plugins-check .status .pluginupdateinfo .separator:after {content:" | ";}
+#page-admin-index #plugins-check .pluginupdateinfo {padding:5px;margin:10px 0;background-color:#d2ebff;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;}
+#page-admin-index #plugins-check .pluginupdateinfo.maturity50 {background-color:#ffd3d9;}
+#page-admin-index #plugins-check .pluginupdateinfo.maturity100,
+#page-admin-index #plugins-check .pluginupdateinfo.maturity150 {background-color:#f3f2aa;}
+#page-admin-index #plugins-check .pluginupdateinfo .info {display:inline-block;}
+#page-admin-index #plugins-check .pluginupdateinfo .separator:after {content:" | ";}
 #page-admin-index .upgradepluginsinfo {text-align:center;}
 #page-admin-index .plugins-check-dependencies {text-align:center;}
 #page-admin-index #plugins-check-available-dependencies {margin-left:auto; margin-right:auto;}
@@ -302,30 +303,23 @@
 #page-admin-plugins #plugins-control-panel .pluginname .pluginicon {width:16px;}
 #page-admin-plugins #plugins-control-panel .pluginname .componentname {font-size:0.8em;color:#999;margin-left:26px;}
 #page-admin-plugins #plugins-control-panel .statusmsg {background-color:#eee;padding:3px;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;}
-#page-admin-plugins #plugins-control-panel .status-missing .pluginname {background-color:#ffd3d9;}
+#page-admin-plugins #plugins-control-panel .status-missing td {background-color:#ffd3d9;}
 #page-admin-plugins #plugins-control-panel .status-missing .statusmsg {color:#600;}
-#page-admin-plugins #plugins-control-panel .status-new .pluginname {background-color:#e7f1c3;}
+#page-admin-plugins #plugins-control-panel .status-new td {background-color:#e7f1c3;}
 #page-admin-plugins #plugins-control-panel .status-new .statusmsg {color:#060;}
 #page-admin-plugins #plugins-control-panel .disabled .availability {background-color:#eee;}
 #page-admin-plugins #plugins-control-panel .msg td {text-align:center;}
 #page-admin-plugins #plugins-control-panel .requiredby {font-size:0.8em;color:#999;}
 #page-admin-plugins #plugins-overview-panel {margin:1em auto;text-align:center;}
 #page-admin-plugins #plugins-overview-panel .info {padding:5px 10px;}
-#page-admin-plugins #plugins-overview-panel .separator {border-left:1px dotted #999;}
-#page-admin-plugins #plugins-overview-panel .info.updatable {margin-left:10px;background-color:#d2ebff;font-weight:bold;-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
-#page-admin-plugins #plugins-overview-filter {margin:1em auto;text-align:center;}
-#page-admin-plugins #plugins-overview-filter .filter-item {padding:5px 10px;}
-#page-admin-plugins #plugins-overview-filter .filter-item.active {font-weight:bold;}
-#page-admin-plugins #plugins-overview-filter .separator {border-left:1px dotted #999;}
 #page-admin-plugins #plugins-control-panel .displayname img.icon { padding-top:0; padding-bottom: 0; }
 #page-admin-plugins #plugins-control-panel .uninstall a {color:#900;}
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo {padding:5px 10px;margin:10px;background-color:#d2ebff;-moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px;}
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo.maturity50 {background-color:#ffd3d9;}
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo.maturity100,
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo.maturity150 {background-color:#f3f2aa;}
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo span,
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo a {padding-right:1em;}
-#page-admin-plugins #plugins-control-panel .notes .pluginupdateinfo .separator {border-left:1px dotted #333;}
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo {padding:5px;margin:10px 0;background-color:#d2ebff;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;}
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo.maturity50 {background-color:#ffd3d9;}
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo.maturity100,
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo.maturity150 {background-color:#f3f2aa;}
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo .info {display:inline-block;}
+#page-admin-plugins #plugins-control-panel .pluginupdateinfo .separator:after {content:" | ";}
 .dir-rtl #plugins-check .pluginupdateinfo {text-align: center;direction: ltr;}
 .dir-rtl #plugins-check .requires-ok {text-align: left;direction: ltr;}
 
