--- a/theme/bootstrapbase/less/moodle/admin.less
+++ b/theme/bootstrapbase/less/moodle/admin.less
@@ -228,14 +228,11 @@ img.iconsmall {
     display: block;
 }
 
-
-#page-admin-index .updateplugin div,
-#page-admin-plugins .updateplugin div {
+#page-admin-index .updateplugin div {
     margin-bottom: 0.5em;
 }
 
-#page-admin-index .updateplugin .updatepluginconfirmexternal,
-#page-admin-plugins .updateplugin .updatepluginconfirmexternal {
+#page-admin-index .updateplugin .updatepluginconfirmexternal {
     padding: 1em;
     background-color: @errorBackground;
     border: 1px solid @errorBorder;
@@ -541,50 +538,86 @@ img.iconsmall {
     background-color: @infoBackground;
 }
 
-#plugins-control-panel .extension .source,
 #page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo.maturity100 .info.release,
-#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo.maturity150 .info.release,
-#plugins-check .status .pluginupdateinfo.maturity100,
-#plugins-check .status .pluginupdateinfo.maturity150 {
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo.maturity150 .info.release {
     background-color: @warningBackground;
 }
 
-#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo.maturity50 .info.release,
-#plugins-check .status .pluginupdateinfo.maturity50 {
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo.maturity50 .info.release {
     background-color: @errorBackground;
 }
 
-#plugins-control-panel .statusmsg {
-    background-color: @grayLighter;
-    padding: 3px;
-    .border-radius(5px);
+// Plugins overview page at admin/plugins.php
+#page-admin-plugins {
+
+    #plugins-overview-panel {
+        .info {
+            display: inline-block;
+            margin-right: 1em;
+        }
+    }
+
+    .checkforupdates {
+        margin: 10px 0;
+        .singlebutton {
+            margin: 5px 0;
+            padding: 0;
+            div, input {
+                margin: 0 3px 0 0;
+            }
+        }
+    }
+
+    #plugins-control-panel {
+        .status-missing td {
+            background-color: @errorBackground;
+        }
+        .pluginname {
+            .displayname img.icon {
+                padding-top: 0;
+                padding-bottom: 0;
+            }
+            .componentname {
+                font-size: @fontSizeSmall;
+                .muted;
+                margin-left: 22px;
+            }
+        }
+        .version {
+            .versionnumber {
+                font-size: @fontSizeSmall;
+                .muted;
+            }
+            .release {
+            }
+        }
+        .availability {
+        }
+        .settings {
+        }
+        .uninstall {
+            a {
+                color: @errorText;
+            }
+        }
+        .notes {
+            .label {
+                margin-right: 3px;
+            }
+            .requiredby {
+                font-size: @fontSizeSmall;
+                .muted;
+            }
+        }
+    }
 }
 
-#plugins-control-panel .status-missing .pluginname {
-    background-color: @errorBackground;
-}
-
-#plugins-control-panel .status-missing .statusmsg {
-    color: @errorText;
-}
-
-#plugins-control-panel .status-new .pluginname {
-    background-color: @successBackground;
-}
-
-#plugins-control-panel .status-new .statusmsg {
-    color: @successText;
-}
-
-#plugins-control-panel .disabled .availability {
-    background-color: @inputDisabledBackground;
-}
 
 // Plugins check page displayed during upgrade.
 #plugins-check-page {
 
     .page-description {
-        .muted
+        .muted;
     }
 
     // Check for updates.
@@ -592,8 +625,8 @@ img.iconsmall {
         .singlebutton {
             margin: 5px 0;
             padding: 0;
-            input {
-                margin: 0;
+            div, input {
+                margin: 0 3px 0 0;
             }
         }
     }
@@ -608,8 +641,8 @@ img.iconsmall {
             .singlebutton {
                 margin: 5px;
                 padding: 0;
-                input {
-                    margin: 0;
+                div, input {
+                    margin: 0 3px 0 0;
                 }
             }
         }
@@ -618,11 +651,13 @@ img.iconsmall {
     // Plugins check table.
     #plugins-check {
         .requires-ok {
-            .muted
+            .muted;
         }
 
         .status-missing, .status-downgrade {
-            background-color: @errorBackground;
+            td {
+                background-color: @errorBackground;
+            }
         }
 
         .displayname {
@@ -648,15 +683,6 @@ img.iconsmall {
                     margin: 0;
                 }
             }
-            .pluginupdateinfo {
-                padding: 5px 10px;
-                margin: 10px 0px;
-                background-color: @infoBackground;
-                .border-radius(10px);
-                .separator:after {
-                    content: " | ";
-                }
-            }
         }
     }
 
@@ -668,8 +694,8 @@ img.iconsmall {
         .singlebutton {
             margin: 5px 0;
             padding: 0;
-            input {
-                margin: 0;
+            div, input {
+                margin: 0 3px 0 0;
             }
         }
     }
@@ -678,7 +704,7 @@ img.iconsmall {
     #plugins-check-available-dependencies {
         .displayname .component {
             font-size: @fontSizeSmall;
-            .muted
+            .muted;
         }
         .info .actions {
             > div {
@@ -697,76 +723,42 @@ img.iconsmall {
     }
 }
 
+// Available plugin update notification.
+
+#plugins-check-page, #plugins-control-panel {
+    .pluginupdateinfo {
+        background-color: @infoBackground;
+        &.maturity50 {
+            background-color: @errorBackground;
+        }
+        &.maturity100, &.maturity150 {
+            background-color: @warningBackground;
+        }
+        padding: 5px;
+        margin: 10px 0;
+        .border-radius(5px);
+        .info {
+            display: inline-block;
+        }
+        .separator:after {
+            content: " | ";
+        }
+        .singlebutton {
+            margin: 5px 0;
+            padding: 0;
+            div, input {
+                margin: 0 3px 0 0;
+            }
+        }
+    }
+}
+
 #page-admin-index .upgradepluginsinfo {
     text-align: center;
 }
 
-#page-admin-plugins .checkforupdates {
-    margin: 0 auto 1em;
-    text-align: center;
-}
-
-#plugins-control-panel .requiredby,
-#plugins-control-panel .pluginname .componentname {
-    font-size: @fontSizeSmall;
-    .muted
-}
-
-#plugins-control-panel .pluginname .componentname {
-    margin-left: 22px;
-}
-
-#plugins-overview-filter .filter-item,
-#plugins-overview-panel .info {
-    padding: 0 10px;
-}
-
-#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo .separator,
-#page-admin-plugins .separator {
-    border-left: 1px dotted @grayLight;
-}
-
-#plugins-control-panel .msg td {
-    text-align: center;
-}
-
-#plugins-overview-filter,
-#plugins-overview-panel {
-    margin: 1em auto;
-    text-align: center;
-}
-
-#plugins-overview-panel .info.updatable {
-    margin-left: 10px;
-    background-color: @infoBackground;
-    font-weight: bold;
-    .border-radius(10px);
-}
-
-#plugins-overview-filter .filter-item.active {
-    font-weight: bold;
-}
-
-#plugins-control-panel .displayname img.icon {
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-#plugins-control-panel .uninstall a {
-    color: @errorText;
-}
-
-#plugins-control-panel .notes .pluginupdateinfo {
-    padding: 5px 10px;
-    margin: 10px;
-    background-color: @infoBackground;
-    .border-radius(10px);
-}
-
-
-#plugins-control-panel .notes .pluginupdateinfo span,
-#plugins-control-panel .notes .pluginupdateinfo a {
-    padding-right: 1em;
+#page-admin-index .adminwarning.availableupdatesinfo .moodleupdateinfo .separator:after {
+    content: " | ";
 }
 
 .dir-rtl {
