MDL-49329 admin: Use the new plugins management on Plugins overview page
The plugins overview page now uses the new plugins management features,
most notably the ability to install all available updates at once.

--- a/theme/bootstrapbase/less/moodle/admin.less
+++ b/theme/bootstrapbase/less/moodle/admin.less
@@ -529,7 +529,6 @@ img.iconsmall {
     text-align: right
 }
 
-// Plugins overview control panel.
 #page-admin-index #notice .checkforupdates {
     text-align: center;
 }
@@ -565,6 +564,14 @@ img.iconsmall {
             div, input {
                 margin: 0 3px 0 0;
             }
+        }
+    }
+
+    .updateavailableinstallall {
+        margin: 5px 0;
+        padding: 0;
+        div, input {
+            margin: 0 3px 5px 0;
         }
     }
 
