MDL-49329 admin: Require confirmation before cancelling plugin install

--- a/theme/bootstrapbase/less/moodle/admin.less
+++ b/theme/bootstrapbase/less/moodle/admin.less
@@ -760,7 +760,7 @@ img.iconsmall {
     }
 }
 
-.install-remote-plugins-buttons {
+.plugins-management-confirm-buttons {
     > div {
         display: inline-block;
         margin: 1em 1em 1em 0;
@@ -771,6 +771,12 @@ img.iconsmall {
             margin: 0;
         }
     }
+}
+
+.uninstalldeleteconfirmexternal {
+    background-color: @warningBackground;
+    padding: 0.5em 1em;
+    margin: 5px 0 10px 0;
 }
 
 #page-admin-index .upgradepluginsinfo {
