MDL-51528 themes: active tab cursor
Set the cursor to a pointer for an active tab with a link to
indicate that the tab is still clickable, even though it is
active. See also MDL-46470 and MDL-51207.

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -2430,3 +2430,11 @@ dd:after {
 dd:after {
   clear: both;
 }
+
+// Active tabs with links should have a different
+// cursor to indicate they are clickable.
+.nav-tabs > .active > a[href],
+.nav-tabs > .active > a[href]:hover,
+.nav-tabs > .active > a[href]:focus {
+    cursor: pointer;
+}
