MDL-52258 calendar: show event duration on block
Highlight the days on the calendar for the entire duration
of the event, not just the start day. The days are highlighted
with the same colour as the starting day and will also show
the event popup on hover.

--- a/theme/bootstrapbase/less/moodle/calendar.less
+++ b/theme/bootstrapbase/less/moodle/calendar.less
@@ -20,6 +20,22 @@
     background-color: @calendarEventUserColor;
 }
 
+.duration_global {
+    background-color: @calendarEventGlobalColor;
+}
+
+.duration_course {
+    background-color: @calendarEventCourseColor;
+}
+
+.duration_group {
+    background-color: @calendarEventGroupColor;
+}
+
+.duration_user {
+    background-color: @calendarEventUserColor;
+}
+
 // Calendar restyling.
 .path-calendar {
     .calendartable {
@@ -314,6 +330,10 @@
         td {
             &.weekend {
                 .muted;
+
+                a {
+                    .muted;
+                }
             }
             a {
                 width: 100%;
