--- a/theme/bootstrapbase/less/moodle/calendar.less
+++ b/theme/bootstrapbase/less/moodle/calendar.less
@@ -20,22 +20,6 @@
     background-color: @calendarEventUserColor;
 }
 
-.duration_global {
-    background-color: @calendarEventGlobalColor;
-}
-
-.duration_course {
-    background-color: @calendarEventCourseColor;
-}
-
-.duration_group {
-    background-color: @calendarEventGroupColor;
-}
-
-.duration_user {
-    background-color: @calendarEventUserColor;
-}
-
 // Calendar restyling.
 .path-calendar {
     .calendartable {
@@ -330,15 +314,39 @@
         td {
             &.weekend {
                 .muted;
-
-                a {
-                    .muted;
-                }
             }
             a {
                 width: 100%;
                 height: 100%;
                 display: block;
+            }
+            &.duration_global {
+                border-top: 1px solid @calendarEventGlobalColor;
+                border-bottom: 1px solid @calendarEventGlobalColor;
+                &.duration_finish {
+                    background-color: @calendarEventGlobalColor;
+                }
+            }
+            &.duration_course {
+                border-top: 1px solid @calendarEventCourseColor;
+                border-bottom: 1px solid @calendarEventCourseColor;
+                &.duration_finish {
+                    background-color: @calendarEventCourseColor;
+                }
+            }
+            &.duration_group {
+                border-top: 1px solid @calendarEventGroupColor;
+                border-bottom: 1px solid @calendarEventGroupColor;
+                &.duration_finish {
+                    background-color: @calendarEventGroupColor;
+                }
+            }
+            &.duration_user {
+                border-top: 1px solid @calendarEventUserColor;
+                border-bottom: 1px solid @calendarEventUserColor;
+                &.duration_finish {
+                    background-color: @calendarEventUserColor;
+                }
             }
         }
         caption {
