--- a/mod/workshop/styles.css
+++ b/mod/workshop/styles.css
@@ -382,7 +382,7 @@
     top: 3px;
     left: 3px;
 }
-.path-mod-workshop .assessment-full .header .reviewer .picture {
+.dir-rtl.path-mod-workshop .assessment-full .header .reviewer .picture {
     right:3px;
     left:auto;
 }
