MDL-52738 quiz: Previous button during attempt review.
This is to be consistent with places like forum and book, where if we
have a next link, we also have a previous link.

At the same time I have amended the links/buttons from 'Previous'/'Next'
to 'Previous page'/'Next page' because I think that is clearer.

Also, on the last page of the quiz, I have changed 'Next' to 'Finish
attempt ...' for consistency with the link in the navigation block.

AMOS BEGIN
 CPY [navigatenext,mod_assignment],[navigatenext,mod_quiz]
 CPY [navigateprevious,mod_assignment],[navigateprevious,mod_quiz]
AMOS END

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -18,10 +18,18 @@
     text-align: left;
     padding-top: 1.5em;
 }
-
 #page-mod-quiz-attempt.dir-rtl .submitbtns,
 #page-mod-quiz-review.dir-rtl .submitbtns {
     text-align: right;
+}
+
+#page-mod-quiz-attempt .submitbtns .mod_quiz-next-nav,
+#page-mod-quiz-review .submitbtns .mod_quiz-next-nav {
+    float: right;
+}
+#page-mod-quiz-attempt.dir-rtl .submitbtns .mod_quiz-next-nav,
+#page-mod-quiz-review.dir-rtl .submitbtns .mod_quiz-next-nav {
+    float: left;
 }
 
 .path-mod-quiz .mod_quiz-redo_question_button {
