MDL-51196 mod_forum: Text emails link to post anchor

--- a/mod/forum/templates/forum_post_email_textemail.mustache
+++ b/mod/forum/templates/forum_post_email_textemail.mustache
@@ -43,7 +43,7 @@
     * forumindexlink
 }}
 {{{ coursename }}} -> {{# str }} forums, forum {{/ str }} -> {{{ forumname }}}{{# showdiscussionname }} -> {{{ discussionname }}} {{/ showdiscussionname }}
-{{ discussionlink }}
+{{ permalink }}
 {{{ subject }}}
 {{# str }} bynameondate, forum, { "name": "{{{ authorfullname }}}", "date": "{{ postdate }}" } {{/ str }}
 ---------------------------------------------------------------------
