--- a/lib/templates/notification_warning.mustache
+++ b/lib/templates/notification_warning.mustache
@@ -30,10 +30,15 @@
     Context variables required for this template:
     * message A cleaned string (use clean_text()) to display.
     * extraclasses Additional classes to apply to the notification.
+    * closebutton Whether a close button should be displayed to dismiss the message.
+    * announce Whether the notification should be announced to screen readers.
 
     Example context (json):
-    { "message": "Your pants are on fire!", "extraclasses": "foo bar"}
+    { "message": "Your pants are on fire!", "closebutton": 1, "announce": 1, "extraclasses": "foo bar"}
 }}
-<div class="alert alert-warning alert-block fade in {{ extraclasses }}">
+<div class="alert alert-warning alert-block fade in {{ extraclasses }}" {{!
+    }}{{# announce }} aria-live="assertive"{{/ announce }}{{!
+    }}>
+    {{# closebutton }}<button type="button" class="close" data-dismiss="alert">&times;</button>{{/ closebutton }}
     {{{ message }}}
 </div>
