MDL-51196 mod_forum: Updating required context vars

--- a/mod/forum/templates/forum_post_email_textemail.mustache
+++ b/mod/forum/templates/forum_post_email_textemail.mustache
@@ -30,7 +30,7 @@
     * forumname
     * showdiscussionname
     * discussionname
-    * discussionlink
+    * permalink
     * subject
     * authorfullname
     * postdate
