MDL-51802 core: change template example

--- a/lib/templates/inplace_editable.mustache
+++ b/lib/templates/inplace_editable.mustache
@@ -25,8 +25,11 @@
     Data attributes required for JS:
     * data-inplaceeditable
     * data-inplaceeditablelink
-    * data-identifier
-    * data-callback
+    * data-component
+    * data-itemtype
+    * data-itemid
+    * data-value
+    * data-editlabel
 
     Context variables required for this template:
     * none
@@ -36,8 +39,8 @@
         "displayvalue" : "<a href=\"#\">Moodle</a>",
         "value" : "Moodle",
         "itemid" : "1",
-        "component" : "core_tag",
-        "itemtype" : "tagname",
+        "component" : "core_unknown",
+        "itemtype" : "unknown",
         "edithint" : "Edit this",
         "editlabel" : "New name for this"
     }
