--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -1078,7 +1078,7 @@ body.tag .managelink {
     float: right;
     padding: 3px;
     margin: 3px;
-    > *:hover {
+    > a:hover {
         border-bottom:1px solid #666;
     }
 }
