--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -826,7 +826,7 @@ tr.flagged-tag a {
     vertical-align: middle;
     padding: 4px;
 }
-.tag-management-table span.inplaceeditable.inplaceeditingon input {
+.tag-management-table .inplaceeditable.inplaceeditingon input {
     width: 150px;
 }
 .path-tag .tag-relatedtags {
@@ -2452,47 +2452,58 @@ span.inplaceeditable.inplaceeditingon span.editinstructions {
     margin-left: -300px;
     margin-right: 0;
 }
-span.inplaceeditable .quickeditlink img {
-    opacity: 0.2;
-}
-span.inplaceeditable a.quickeditlink {
-    color: inherit;
-    text-decoration: inherit;
-}
-span.inplaceeditable.inplaceeditable-toggle .quickeditlink img,
-span.inplaceeditable:hover .quickeditlink img,
-span.inplaceeditable .quickeditlink:focus img {
-    opacity: 1;
-}
-span.inplaceeditable.inplaceeditingon input {
-    width: 330px;
-    height: 16px;
-    vertical-align: text-bottom;
-    margin-bottom: 0;
-}
-span.inplaceeditable select {
-    margin-bottom: 0;
-}
-h3.sectionname span.inplaceeditable.inplaceeditingon span.editinstructions {
-    margin-top: -20px;
-}
-
-
-.jsenabled {
-    .inplaceeditable {
-        .quickediticon {
-            display: inline;
-        }
-        &.inplaceeditable-toggle {
-            .quickediticon {
-                display: none;
-            }
-        }
-    }
-}
 
 .inplaceeditable {
-    .quickediticon {
+
+    &.inplaceeditingon {
+        position: relative;
+
+        .editinstructions {
+            margin-top: -30px;
+            font-weight: normal;
+            margin-right: -300px;
+            margin-left: 0;
+        }
+
+        input {
+            width: 330px;
+            height: 16px;
+            vertical-align: text-bottom;
+            margin-bottom: 0;
+        }
+
+        select {
+            margin-bottom: 0;
+        }
+    }
+
+    .quickediticon img {
+        opacity: 0.2;
+    }
+
+    .quickeditlink {
+        color: inherit;
+        text-decoration: inherit;
+    }
+
+    &:hover .quickeditlink .quickediticon img,
+    .quickeditlink:focus .quickediticon img {
+        opacity: 1;
+    }
+
+    &.inplaceeditable-toggle .quickediticon {
         display: none;
     }
+}
+
+.dir-rtl .inplaceeditable {
+    &.inplaceeditingon {
+        .editinstructions {
+            margin-left: -300px;
+            margin-right: 0;
+        }
+    }
+}
+h3.sectionname .inplaceeditable.inplaceeditingon .editinstructions {
+    margin-top: -20px;
 }
