MDL-53050 mod_forum: fix for base highlight

--- a/mod/forum/styles.css
+++ b/mod/forum/styles.css
@@ -123,6 +123,7 @@ span.unread {
 /* Forumpost hash anchor target */
 .path-mod-forum :target + :before {
     display: block;
+    content: '';
     width: 4px;
     position: absolute;
     background: #0070a8;
