This is for the media css cannot work bug

--- a/theme/bootstrapbase/less/bootstrap/variables.less
+++ b/theme/bootstrapbase/less/bootstrap/variables.less
@@ -177,8 +177,8 @@
 
 // Navbar
 // -------------------------
-@navbarCollapseWidth:             979px;
-@navbarCollapseDesktopWidth:      @navbarCollapseWidth + 1;
+@navbarCollapseWidth:             980px;
+@navbarCollapseDesktopWidth:      @navbarCollapseWidth;
 
 @navbarHeight:                    40px;
 @navbarBackgroundHighlight:       #ffffff;
