--- a/theme/bootstrapbase/less/bootstrap/responsive-navbar.less
+++ b/theme/bootstrapbase/less/bootstrap/responsive-navbar.less
@@ -5,7 +5,7 @@
 
 // TABLETS AND BELOW
 // -----------------
-@media (max-width: @navbarCollapseWidth) {
+@media (max-width: (@navbarCollapseWidth)) {
 
   // UNFIX THE TOPBAR
   // ----------------
